# EasySerialPorting

./: CMakeLists.txt  LICENSE  README.md
EasySerialPorting/: CMakeLists.txt  CRCTool.cpp  CRCTool.hpp  PackageConfig.cmake.in  PackageVersion.hpp.in  Port.cpp  Port.hpp  Watcher.cpp  Watcher.hpp
EasySerialPortingTestReceiver/: CMakeLists.txt  Main.cpp
EasySerialPortingTestSender/: CMakeLists.txt  Main.cpp
